--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1596,7 +1596,7 @@ _::-webkit-full-page-media, _:future, :root .souba_l select { background-color: 
 	
 	#sub-page .main-content { width: 100%; padding: 3%; margin: 0 auto; }
 	#sub-page .main-content h2 { font-size: 160%; }
-	#sub-page .main-content img { margin-bottom:15px; width: 100%; height: auto;}
+	#sub-page .main-content img { margin-bottom:15px; }
 	.main_b { width:100%; order:1; padding:3%; }
 	.side_b { width:100%; order:2; padding:3%; }
 	
