--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2643,3 +2643,6 @@ form label {
 }
 
 .aeon_img_r { text-align: right; }
+@media screen and (max-width:1024px){
+	.aeon_img_r img { text-align: right; width: 100%; height: auto; }
+}
