お知らせ等微調整230210

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -40,6 +40,7 @@
 	.w45p { width:100%; }
 	.w50p { width:100%; }	
 	.w50p_smp { width: 50%!important; }
+	.w50p_smp_s { width: 50%!important; }
 	.w55p { width:100%; }
 	.w60p { width:100%; }
 	.w60p_smp { width: 60%!important; }
