--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -48,6 +48,10 @@ select { min-height: 40px; border: solid 1px #bfbfbf; background-color: #f5f5f5;
 .center { text-align: center!important;}
 .middle { vertical-align: middle!important;}
 
+@media print, screen and (min-width:769px) {
+	.smp_s { display:none !important;}
+}
+
 @media print, screen and (min-width:1025px) {
 	.smp{ display:none !important;}
 	.ml15 { margin-left:15px; }
@@ -55,17 +59,12 @@ select { min-height: 40px; border: solid 1px #bfbfbf; background-color: #f5f5f5;
 	.pc_center { text-align:center;}	
 }
 
-@media screen and (min-width:1281px) {
+@media screen and (max-width:769px) {
 	.tub { display:none!important; }
-}
-
-@media screen and (min-width:1025px) and (max-width:1280px) {
- .tub { display:block !important;}
 }
 
 @media screen and (max-width:1024px) {
 	.pc{ display:none !important;}
-	.tub { display:none!important; }
 	*{ box-sizing:border-box;}	
 	.right { text-align:left;}
 	.center_smp { text-align: center;}
@@ -117,10 +116,10 @@ header { margin:0; padding:0; position: relative;}
 	top:0;
 }
 
-#header_inner { max-width:1400px; margin: 0 auto; padding: 0;}
+#header_inner { width:1400px; margin: 0 auto; padding: 10px;}
 
 @media screen and (min-width:1025px) and (max-width:1280px){
-	#header_inner { max-width:100%; margin: 0 auto; padding: 0;}
+	#header_inner { width:100%; margin: 0 auto; padding: 0;}
 	.h_logo_box {width: 20%!important;}
 	.h_tel_box {width: 25%!important;}
 	.h_box { display: flex; flex-wrap: wrap; justify-content: space-between; }
@@ -486,7 +485,7 @@ body {
 	background: #000;
   }
   
-  input[type=checkbox] { display: none; }  
+  input[type=checkbox]#overlay-input { display: none; }  
   input[type=checkbox]:checked ~ #overlay { visibility: visible; opacity: 1; overflow-x: auto; }  
   input[type=checkbox]:checked ~ #overlay-button:hover span, input[type=checkbox]:checked ~ #overlay-button span { background: transparent; }
   
@@ -782,12 +781,10 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 	}
 }
 
-#mainimage { width:100%; height: 100vh; margin:0 auto; top:0; z-index: 0;  position: relative; object-fit: cover !important; display: flex; justify-content: center; align-items: center; flex-direction: column; }
+#mainimage {  z-index: 0;  position: relative; object-fit: cover !important; display: flex; justify-content: center; align-items: center; flex-direction: column; }
 
 /* メインイメージスライダー2 */
 .main_slide {
-	position: absolute;
-	top:0;
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
@@ -801,8 +798,8 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 	.main_slide{ height: 70vh; }
 }
 
-@media screen and (min-width:1026px) and (max-width:1280px){
-	.main_slide{ height: 80vh; }	
+@media screen and (min-width:1026px) and (max-width:1366px){
+	.main_slide{ height: 60vh; }	
 }
 
 /* スライダー画像 */
@@ -822,7 +819,7 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 	opacity: 0;
 }
 
-.main_slide .image .gatsby-image-wrapper { height: 100%;}
+.main_slide .image .gatsby-image-wrapper { width: 100%; height: 100%; }
 
 	  /* アニメーション定義 */
 	  @keyframes slider-1 {
@@ -908,15 +905,15 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 }
 
 @media screen and (min-width:1026px) and (max-width:1280px){
-	#mainimage { width:100%; height: 80vh; margin:0 auto; top:0; z-index: 0; position: relative; object-fit: contain!important; background-repeat: no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: column; }
+	#mainimage {  z-index: 0; position: relative; object-fit: contain!important; background-repeat: no-repeat; display: flex; justify-content: center; align-items: center; flex-direction: column; }
 }
 
 @media screen and (min-width:601px) and (max-width:768px){
-#mainimage { width:100%!important; height: 70vh!important; margin:0 auto; top:0; z-index: 0;  position: relative;  background-repeat: no-repeat; background-position: center !important;  display: flex; justify-content: center; align-items: flex-start; }
+#mainimage {   z-index: 0;  position: relative;  background-repeat: no-repeat; background-position: center !important;  display: flex; justify-content: center; align-items: flex-start; }
 }
 
 @media screen and (max-width:1024px){	
-	#mainimage { width:100%!important; height: 60vh; margin:0 auto; top:0; z-index: 0;  position: relative;  background-repeat: no-repeat; background-position: center !important;  display: flex; justify-content: center; align-items: flex-start; }
+	#mainimage {  z-index: 0;  position: relative;  background-repeat: no-repeat; background-position: center !important;  display: flex; justify-content: center; align-items: flex-start; }
 	#mainimage-sub { width:100%; height: 170px; background-image: url("/images/mainimage_sub.png"); top:0; z-index: 0;  position: relative; background-repeat: no-repeat; background-position:center;  display: flex; justify-content: center; align-items: center; }
 	#mainimage-sub h2 { text-align:center; font-size:200%!important;}
 	#mainimage-inner { width: 100%; height: 100%; margin: 0 auto; position: relative; padding:3%; }
@@ -924,7 +921,12 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 
 .scroll_bt { text-align: center; position: absolute; bottom: 0; z-index: 10; width: 100%; }
 
-.catch_title { width: 100%; position: relative; z-index: 100; text-align: center;}
+.catch_title { width: 100%; height: 100%; position: absolute; top: 0; z-index: 100; text-align: center; display: flex; flex-wrap: wrap; justify-content: center; align-items: center; }
+.catch_title h2 { width: 80%; }
+
+@media screen and (max-width:768px){
+	.catch_title h2 { width: 90%; }
+}
 
 /*メイン*/
 #content{ overflow:hidden; text-align:left; background-repeat:repeat-x; background-position:bottom;}
@@ -938,7 +940,7 @@ section { width:100%; margin:0 auto;}
 	.scroll_bt img { width: 50px;}
 	.bg_slash_box { background: rgba(255,255,255,0.3); z-index:1; width:100%; height:100%; position:absolute; top:0; left:0; }
 	.main-content { width:100%; margin:0 auto; padding:3% 0; }
-	.catch_title { width: 100%; position: relative; z-index: 100; text-align: center; padding: 20px;}
+	
 }
 
 #kuchikomi .main-content { padding:2% 0; font-family: 'Noto Sans JP', sans-serif; font-style: normal; }
@@ -1008,12 +1010,21 @@ section { width:100%; margin:0 auto;}
 #news_r dd div.report a,.cat_list li.report a { background-color:#e4007f; }
 #news_r dd div.staffblog a,.cat_list li.staffblog a { background-color:#5ec618; }
 
-@media screen and (max-width:1024px){
-	.news_box { display:flex; flex-wrap:wrap; padding: 3%; }
+@media screen and (max-width:768px){
 	#news_l,#news_r { width:100%; padding: 3%;}
-	#news dl { border-top: dashed 1px #ccc; }
 	#news dt { width: 100%; border-bottom: dashed 0px #ccc; padding-bottom: 0; }
 	#news dd { width: 100%; border-bottom: dashed 1px #ccc; padding: 10px 35px 15px 0; }
+}
+
+@media screen and (max-width:1024px){
+	#news .main-content  { padding: 2%!important;}
+	.news_box { display:flex; flex-wrap:wrap; padding: 3%; }
+	
+	#news dl { border-top: dashed 1px #ccc; }
+
+	#news_r dt { width: 20%; }
+	#news_r dd { width: 80%; }
+	
 }
 
 @media only screen  and (max-device-width : 667px) {
@@ -2192,7 +2203,6 @@ ol li { list-style-type:decimal; margin:15px 0;}
     font-size: 16px;
     cursor: pointer;
     outline: none;
-    margin: 10px 15px;
     min-width: 200px;
 	font-family: "Noto Sans JP", sans-serif;
 	font-weight: 700;
@@ -2273,6 +2283,10 @@ ol li { list-style-type:decimal; margin:15px 0;}
 	.sns_bt { display:flex; flex-wrap:wrap; justify-content:center; width:100%; }
 	.sns_bt li { padding:1%;}
 	.sns_bt li a { border-radius:5px;}
+	
+}
+
+@media screen and (max-width:767px){
 	.insta_bt .insta { border-radius:5px;}
 }
 
@@ -2293,7 +2307,7 @@ ol li { list-style-type:decimal; margin:15px 0;}
 /*iPadPro横*/
 @media (orientation: landscape) and (min-width:769px) and (max-width:1080px) {
 	.main-content { width: 100%!important; margin: 0 auto; padding: 3% 8%!important; }
-	#mainimage { width: 100%; height: 100vh;  display: flex; flex-wrap: wrap; justify-content: center; align-items: center; padding: 3%;}
+	#mainimage { display: flex; flex-wrap: wrap; justify-content: center; align-items: center; padding: 3%;}
 	#header_inner {
 		width: 100%;
 		margin: 0 auto;
@@ -2302,7 +2316,7 @@ ol li { list-style-type:decimal; margin:15px 0;}
 	#footer-inner .w30p { padding-right:3%;}
 	.about_img_list li { width: 25%; }
 	#footer ul { width: 100%;}
-	.catch_title {width: 100%;}
+	
 	.catch_title h2 { font-size: 160%!important; margin: 0;}
 	.catch_title h3 { font-size: 220%!important; margin: 0;}
 	#about .main-content,#news .main-content { width: 100%!important; margin: 0 auto; padding: 3%; }
@@ -2311,11 +2325,11 @@ ol li { list-style-type:decimal; margin:15px 0;}
 
 /*iPadPro縦*/
 @media (orientation: portrait) and (min-width:769px) and (max-width:1080px){
-	#mainimage { width:100%; height: 900px; margin:0 auto; top:0; z-index: 0;  position: relative; background-size:cover!important; background-position:center  center !important; object-fit: cover !important; display: flex; flex-wrap: wrap; justify-content: center; align-items: center; padding: 3%; }
+	#mainimage { z-index: 0;  position: relative; background-size:cover!important; background-position:center  center !important; object-fit: cover !important; display: flex; flex-wrap: wrap; justify-content: center; align-items: center; padding: 3%; }
 	#header { width: 100%; }
 	#header_inner { width: 100%; }
 	#footer ul { width: 100%; }
-	.catch_title { width: 100%; }
+	
 	.catch_title h2 { font-size: 160%!important; margin: 0;}
 	.catch_title h3 { font-size: 220%!important; margin: 0;}
 	#about .main-content,#news .main-content { width: 100%!important; margin: 0 auto; padding: 3%; }
@@ -2640,6 +2654,27 @@ form label {
     white-space: nowrap;
 	padding: 5px 8px;
     border: solid 1px #ccc;
+	box-sizing: border-box;
+}
+
+.eigyo_check { text-align: center; margin:3% 0; }
+.eigyo_check label {
+	border: 0;
+	margin:0;
+	width: 100%;
+	background-color: #fd7416;
+	color: #fff;
+	border-radius: 100px;
+	padding: 10px;
+	inline-size: min-content;
+	overflow-wrap: break-word;
+	inline-size: min-content;
+}
+.eigyo_check input { margin-right: 3px; }
+
+@media screen and (max-width:768px) {
+	.form label { padding:1% 2%; margin: 0 3% 3% 0; }
+	.eigyo_check label { font-size: 90%; }
 }
 
 .aeon_img_r { text-align: right; }
