--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -990,7 +990,7 @@ section { width:100%; margin:0 auto;}
 #news_r dd:nth-of-type(1):after,#news_r dd:nth-of-type(2):after,#news_r dd:nth-of-type(3):after { content:""; background-image: url("../images/new_icon.png"); width: 35px; height: 35px; background-size: cover; display: inline-block; margin-left: 15px; animation: flash 0.8s ease-in infinite alternate; position: absolute; top:5px; left:-30px; z-index:10;}
 
 @media screen and (max-width:768px){
-#news_r dd:nth-of-type(1):after,#news_r dd:nth-of-type(2):after,#news_r dd:nth-of-type(3):after { position: absolute; top: -30px; left:initial; right: 0; }
+#news_r dd:nth-of-type(1):after,#news_r dd:nth-of-type(2):after,#news_r dd:nth-of-type(3):after { position: absolute; top: -5px; left:initial; right: -5px; }
 }
 
 #news_r dd a:hover { text-decoration: none;}
@@ -1012,6 +1012,7 @@ section { width:100%; margin:0 auto;}
 
 @media screen and (max-width:768px){
 	#news_l,#news_r { width:100%; padding: 3%;}
+	#news_r dd .fa-angle-right { margin-top: initial; }
 	#news dt { width: 100%; border-bottom: dashed 0px #ccc; padding-bottom: 0; }
 	#news dd { width: 100%; border-bottom: dashed 1px #ccc; padding: 10px 35px 15px 0; }
 }
