--- a/src/css/common.css
+++ b/src/css/common.css
@@ -134,3 +134,9 @@
 @media screen and (max-width:480px){
 	.mb25_smp { margin-bottom:25px!important;}
 }
+
+.g-recaptcha {
+	display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
