--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2683,3 +2683,19 @@ form label {
 	.aeon_img_r img { text-align: right; width: 100%!important; height: auto!important; }
 }
 
+.submit_check label { margin: 0!important; }
+
+.g-recaptcha {
+	display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width:768px){
+	.submit_check label { font-size: 14px; margin: 0!important; padding: 8px; }
+}
+
+.page-nav { display: flex; flex-wrap: wrap; }
+.page-nav li { padding: 0 10px 10px 0; }
+.page-nav li a { width: 40px; height: 40px; border: solid 2px #fd7416; background-color: #fd7416; color: #fff; border-radius: 10px; text-decoration: none; display: flex; flex-wrap: wrap; justify-content: center; align-items: center; }
+.page-nav li a:hover { background-color: #fff; color: #fd7416; border: solid 2px #fd7416; }
