--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1875,6 +1875,9 @@ ol li { list-style-type:decimal; margin:15px 0;}
 	font-size: 2.4rem;
 	position: relative;
 	text-align:center;
+	@media screen and (max-width:768px){
+		font-size: 1.4rem;
+	}
 }
 .page_title01::before {
   content: '';
