--- a/src/css/common.css
+++ b/src/css/common.css
@@ -131,6 +131,10 @@
 	.plr15p_smp { padding: 0 15%;}
 }
 
+@media screen and (max-width:767px){
+.mt0_smp { margin-top: 0!important;}
+}
+
 @media screen and (max-width:480px){
 	.mb25_smp { margin-bottom:25px!important;}
 }
