--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -990,7 +990,7 @@ section { width:100%; margin:0 auto;}
 #news_r dt { width: 15%; border-bottom: dashed 1px #ccc; padding: 15px 0; position:relative; }
 
 #news_r dd { width: 85%; border-bottom: dashed 1px #ccc; padding: 20px 0 20px 20px; position: relative;}
-#news_r dd a { position: relative; color: #000;}
+#news_r dd a { position: relative; color: #000; font-size: 14px;}
 
 #news_r dd:nth-of-type(1):after,#news_r dd:nth-of-type(2):after,#news_r dd:nth-of-type(3):after { content:""; background-image: url("../images/new_icon.png"); width: 35px; height: 35px; background-size: cover; display: inline-block; margin-left: 15px; animation: flash 0.8s ease-in infinite alternate; position: absolute; top:5px; left:-30px; z-index:10;}
 
@@ -1003,7 +1003,7 @@ section { width:100%; margin:0 auto;}
 #news_r dd .fa-angle-right { color: #fd7416; position: absolute; right:0; top:50%; margin-top: -.5em; font-size: 140%; }
 
 #news_r dd div { position:relative; display:inline-block; margin-bottom: 10px; }
-#news_r dd div a { padding:5px 8px; border-radius:10px; font-size:12px; background-color:#ff7415; color:#fff; margin-right:10px; transition: all 0.3s ease;}
+#news_r dd div a { padding:8px 10px; border-radius:10px; font-size:12px; background-color:#ff7415; color:#fff; margin-right:10px; transition: all 0.3s ease;}
 #news_r dd div a:hover { text-decoration: none; opacity: 0.5;}
 
 #news_r dd div.blog a,.cat_list li.blog a { background-color:#5ec618; }
@@ -1036,8 +1036,7 @@ section { width:100%; margin:0 auto;}
 @media only screen  and (max-device-width : 667px) {
 	#news_r dt { width: 100%!important; padding: 20px 0 8px 0; position:relative; }
 	#news_r dd { width: 100%!important; padding: 0 0 20px 0; position: relative;}
-	#news_r dd a { color: #000; display:inline-block; position:initial; padding-top:10px; }
-	#news_r dd div {  margin-bottom: 0px; }
+	#news_r dd a { color: #000; display:inline-block; position:initial; padding:10px 0; }
 }
 
 @media screen and (min-width:1200px) {
