--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -879,7 +879,7 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 	animation-delay: 56s;
 }
 
-#mainimage-sub { width:100%; height: 400px; margin-top:122px; background-image: url("/images/mainimage/mainimage_sub.jpg"); top:0; z-index: 0;  position: relative; background-repeat: no-repeat; background-position:top center; background-size: cover!important; display: flex; justify-content: center; align-items: center; }
+#mainimage-sub { width:100%; height: 400px; margin-top:143px; background-image: url("/images/mainimage/mainimage_sub.jpg"); top:0; z-index: 0;  position: relative; background-repeat: no-repeat; background-position:top center; background-size: cover!important; display: flex; justify-content: center; align-items: center; }
 #mainimage-sub  h2 { font-size: 300%; font-family: 'Noto Sans JP', sans-serif; font-weight: 900; }
 #mainimage-inner { width:1200px; height: 100%; margin:0 auto; position: relative; display: flex; justify-content: center; align-items: center;}
 
@@ -900,7 +900,7 @@ address { font-style:normal; color: #fff; text-align: center; font-size: 12px!im
 #mainimage-sub.sdgs { background-image: url("/images/mainimage/mainimage_sdgs.jpg");}
 #mainimage-sub.color-simulation { background-image: url("/images/mainimage/mainimage_color.jpg"); background-position:bottom;}
 #mainimage-sub.gaiheki { background-image: url("/images/mainimage/mainimage_gaiheki.jpg");}
-#mainimage-sub.yane-fuki { background-image: url("/images/mainimage/mainimage_yanefuki.jpg");}
+#mainimage-sub.yanefuki { background-image: url("/images/mainimage/mainimage_yanefuki.jpg");}
 #mainimage-sub.karucera-works { background-image: url("/images/mainimage/mainimage_karucera.jpg");}
 #mainimage-sub.yane-cover { background-image: url("/images/mainimage/mainimage_yanecover.jpg");}
 #mainimage-sub.drainspout { background-image: url("/images/mainimage/mainimage_drainspout.jpg");}
@@ -1573,7 +1573,7 @@ _::-webkit-full-page-media, _:future, :root .souba_l select { background-color: 
 .link_bn_box a:hover { opacity: 0.8; border-bottom:solid 2px #ff7415;transition: all 0.3s ease; }
 
 .link_bn_box dl { width:100%; display:flex; flex-direction:column; }
-.link_bn_box dl dt:after { display:inline-block; content:""; background-image: url(../images/arrow_r.svg); background-size: cover; width:24px; height:24px; z-index:1000; font-size:100%; position:absolute; top:15px; right:10px; }
+.link_bn_box dl dt:after { display:inline-block; content:""; background-image: url(../images/arrow_r.svg); fill: #fff; background-size: cover; width:24px; height:24px; z-index:10; font-size:100%; position:absolute; top:15px; right:10px; }
 
 .link_bn_box dt { background-color:#ff7415; padding:3%; font-family: 'Noto Sans JP', sans-serif; font-weight: 900; color:#fff; font-size:140%; position:relative; }
 .link_bn_box dd { padding:3%; background-color:#fff; font-family: 'Noto Sans JP', sans-serif; font-weight: 700; color:#000; height:100%;  }
