--- a/src/css/paint.scss
+++ b/src/css/paint.scss
@@ -55,8 +55,11 @@
 	line-height: 1.2;
 	color: #00652c;
 	margin-bottom: 20px;
+	@media screen and (max-width:1024px){
+		font-size: 300%!important;
+	}
 	@media screen and (max-width:768px){
-		font-size: 200%;
+		font-size: 200%!important;
 	}
 }
 .yanefuki_box h2 span { 
@@ -64,15 +67,17 @@
  }
 .yanefuki_img_box {
 	position: absolute; top: 10px; right: 0; width: 400px; display: flex; flex-wrap: wrap; z-index: 0;
-	@media screen and (max-width:768px){
+	@media screen and (max-width:1024px){
 		position: static;
 		width: 100%;
 	}
-}
-
-.yanefuki_img_box div {
-	@media screen and (max-width:768px){
-		width : calc(100% / 2) ;
+	.img {
+		@media screen and (max-width:1024px){
+			padding: 15px;
+		}
+		@media screen and (max-width:767px){
+			width : calc(100% / 2) ;
+		}
 	}
 }
 .yanefuki_txt01 { position: relative; z-index: 1;}
@@ -108,17 +113,22 @@
 	}
 }
 
-.yanefuki_box2_l { position: relative; z-index: 1; }
+.yanefuki_box2_l {
+	position: relative; z-index: 1;
+	@media screen and (max-width:768px){
+		width: 70%;
+	}
+}
 .yanefuki_box2_r { 
 	width: 25%; position: absolute; top:0; right: 30px; z-index: 0;
-	@media screen and (max-width:768px){
+	@media screen and (max-width:767px){
 		width: 60%; position: static;  z-index: 0; margin: 0 auto;
 	}
 }
 
 .yanefuki_content { 
 	background-color: #fff;
-	
+	margin-bottom: 50px;	
 	img {
 		@media screen and (max-width:768px){
 			width : 100%; height: auto;
@@ -130,29 +140,167 @@
 		color: #fff;
 		background: linear-gradient(-45deg,#ff7415 25%,#ff8a3a 0,#ff8a3a 50%,#ff7415 0,#ff7415 75%,#ff8a3a 0);
 		background-size: 20px 20px;
-		h3 { font-family: 'Noto Sans JP', sans-serif; font-size:160%; font-weight: 900; }
+		font-family: 'Noto Sans JP', sans-serif;
+		font-size:160%;
+		font-weight: 900;
+		@media screen and (max-width:768px){
+			padding: 3%;
+			font-size:140%;
+		}
 	}
-	.yanefuki_inner { display: flex; flex-wrap: wrap; padding: 2%; }
+	.subtitle {
+		position: relative;
+		font-family: 'Noto Sans JP', sans-serif;
+		font-size: 180%;
+		font-weight: 900;
+		padding-bottom: 10px;
+		margin-bottom: 30px;
+		@media screen and (max-width:768px){
+			font-size: 140%;
+		}
+		&:after {			
+			backface-visibility: hidden;
+			background-image: repeating-linear-gradient(-45deg,#00652c,#00652c 1px,transparent 2px,transparent 5px);
+			background-size: 7px 7px;
+			bottom: 0;
+			content: "";
+			height: 10px;
+			left: 0;
+			position: absolute;
+			width: 100%;
+		}
+	}
+	.subtitle2 {
+		border-bottom: #00652c solid 5px; padding-bottom: 5px; font-size: 120%; font-family: 'Noto Sans JP', sans-serif; font-weight: 900; margin: 20px 0;
+		@media screen and (max-width:768px){
+			font-size: 100%;
+		}
+	}
+	.yanefuki_inner {
+		display: flex; flex-wrap: wrap; padding: 2%;
+		@media screen and (max-width:768px){
+			padding: 20px 20px 0px 20px;
+		}
+		.yanefuki_l {
+			width: 30%;
+			@media screen and (max-width:1024px){
+				width: 40%;
+			}
+			@media screen and (max-width:767px){
+				width: 100%;
+			}
+		}
+		.yanefuki_r {
+			width: 70%; padding-left: 20px;
+			@media screen and (max-width:1024px){
+				width: 60%;
+			}
+			@media screen and (max-width:767px){
+				width: 100%; padding-left: 0;
+			}
+		}
+		
+		
+	}
+	.inner {
+		padding: 2%;
+		
+		@media screen and (max-width:768px){
+			padding: 20px;
+			
+			
+		}
+		ul {
+			display: flex; flex-wrap: wrap; margin: 20px 0;
+			li {
+				padding-right: 10px;
+				@media screen and (max-width:1024px){
+					width: calc(100% / 4);
+				}
+				@media screen and (max-width:767px){
+					width: calc(100% / 2);
+				}
+			}
+		}
+		.yanefuki_l1 {
+			width: 30%;
+			@media screen and (max-width:1024px){
+				width: 40%;
+			}
+			@media screen and (max-width:767px){
+				width: 100%;
+			}
+		}
+		.yanefuki_r1 {
+			width: 70%; padding-left: 20px;
+			@media screen and (max-width:1024px){
+				width: 60%;
+			}
+			@media screen and (max-width:767px){
+				width: 100%; padding-left: 0;
+			}
+		}
+		.yanefuki_l2 {
+			width: 80%;
+			padding-right: 20px;
+			@media screen and (max-width:1024px){
+				width: 70%;
+			}
+			@media screen and (max-width:768px){
+				width: 70%;
+			}
+			@media screen and (max-width:767px){
+				width: 100%;
+				
+			}
+		}
+		.yanefuki_r2 {
+			width: 20%;
+			@media screen and (max-width:1024px){
+				width: 30%;
+			}
+			@media screen and (max-width:768px){
+				width: 30%;				
+			}
+			@media screen and (max-width:767px){
+				width: 100%;
+				text-align: center;				
+			}
+			img {
+				@media screen and (max-width:767px){
+					width: 60%; margin: 0 auto;
+				}
+			}
+		}
+	}
 }
 
-.himitsu_box { width: 100%; display: flex; flex-wrap: wrap; margin-top: 30px; }
-.himitsu_box div { 
-	width : calc(100% / 3) ; padding: 2%; background-color: #fff;
+.himitsu_box {
+	width: 100%; display: flex; flex-wrap: wrap; margin-top: 30px; position: relative; z-index: 1;
 	@media screen and (max-width:768px){
-		width : calc(100% / 1) ;
-		padding: 15px;
-		margin-bottom: 3%;
+		justify-content: center;
+	}
+	.inner { 
+		width : calc(100% / 3) ; padding: 2%; background-color: #fff;
+		@media screen and (max-width:768px){
+			width : calc(100% / 3) ;
+		}
+		@media screen and (max-width:767px){
+			width : calc(100% / 1) ;
+			padding: 15px;
+			margin-bottom: 3%;
+		}
 	}
 }
 
 .fukkou_box { 
-	border:solid 5px #fdd935; background-color: #fff; padding: 10px; border-radius: 10px; margin: 20px 0;
+	border:solid 5px #fdd935; background-color: #fff; padding: 20px; border-radius: 10px; margin: 20px 0;
 	@media screen and (max-width:768px){
 		margin: 3% 0;
 	}
 	h3 { font-size: 250%; margin-bottom: 20px;}
-	div	{ 
-		div { 
+	.flex-wrap { 
+		.inner { 
 			width : calc(100% / 3) ; padding: 1%;
 			@media screen and (max-width:768px){
 				width : calc(100% / 2) ; padding: 15px;
@@ -325,10 +473,22 @@
 }
 
 .yanefuki_box5 { padding: 20px; background-color: #fffee9; border-radius: 10px; margin: 3% auto; position: relative; }
+.yanefuki_subttl1 {
+	font-family: 'Noto Sans JP', sans-serif; font-weight: 700; color: #00652c; font-size: 180%; margin-bottom: 0;
+	@media screen and (max-width:1024px){
+		font-size: 220%;
+	}
+	@media screen and (max-width:767px){
+		font-size: 120%;
+	}
+}
 .yanefuki_subttl { 
 	font-family: 'Noto Sans JP', sans-serif; font-weight: 900; color: #00652c; font-size: 400%;
-	@media screen and (max-width:768px){
+	@media screen and (max-width:1024px){
 		font-size: 250%;
+	}
+	@media screen and (max-width:767px){
+		font-size: 180%;
 	}
 }
 .taisin_box {
@@ -361,19 +521,24 @@
 	}
 }
 
-.drainspout_img_list { display: flex; flex-wrap: wrap; margin-bottom: 3%; }
-.drainspout_img_list li { 
-	width : calc(100% / 3); padding: 1%;
-	@media screen and (max-width:768px){
-		width : calc(100% / 2); padding: 1%;
+.drainspout_img_list {
+	display: flex; flex-wrap: wrap; margin-bottom: 3%;
+	li {
+		width : calc(100% / 3); padding: 1%;
+		@media screen and (max-width:768px){
+			width : calc(100% / 2); padding: 1%;
+		}
 	}
 }
 
-.drainspout_img_list2 { display: flex; flex-wrap: wrap; margin-bottom: 3%;  }
-.drainspout_img_list2 li {
-	width : calc(100% / 2); padding: 1%;	
+.drainspout_img_list2 {
+	display: flex; flex-wrap: wrap; margin-bottom: 3%;
+	li {
+		width : calc(100% / 2);
+		padding: 1%;
+		img { width: 100%; height: auto;}
+	}
 }
-.drainspout_img_list2 li img { width: 100%; height: auto;}
 
 .drainspout_content { 
 	background-color: #fff;
@@ -382,16 +547,16 @@
 			width : 100%; height: auto;
 		}
 	}
+	.title {
+		position: relative;
+		padding: 1rem 2rem;
+		color: #fff;  
+		background: linear-gradient(-45deg,#ff7415 25%,#ff8a3a 0,#ff8a3a 50%,#ff7415 0,#ff7415 75%,#ff8a3a 0);
+		background-size: 20px 20px;
+		font-family: 'Noto Sans JP', sans-serif; font-weight: 900;
+		h3 { font-size:180%; font-weight: 900; }
+	}
 }
-.drainspout_content .title {
-  position: relative;
-  padding: 1rem 2rem;
-  color: #fff;  
-  background: linear-gradient(-45deg,#ff7415 25%,#ff8a3a 0,#ff8a3a 50%,#ff7415 0,#ff7415 75%,#ff8a3a 0);
-  background-size: 20px 20px;	
-font-family: 'Noto Sans JP', sans-serif; font-weight: 900;
-}
-.drainspout_content .title h3 { font-size:180%; font-weight: 900; }
 
 .drainspout_osusume { 
 	width : calc(100% / 3); padding: 1%;
@@ -418,9 +583,7 @@ font-family: 'Noto Sans JP', sans-serif; font-weight: 900;
 	background-size: 7px 7px;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-  }
-
-
+}
 
 .yane_cover_item {  padding: 3%; width : calc(100% / 3);}
 .yane_cover_item_title { font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-size: 140%; margin-bottom: 0; }
