--- a/src/css/text.scss
+++ b/src/css/text.scss
@@ -53,6 +53,7 @@ background: linear-gradient(transparent 70%, #fff100 70%);
 @media print, screen and (min-width:769px){
 	.txt140p_pc { font-size:140%; }
 	.txt160p_pc { font-size:160%; }
+	.txt180p_pc { font-size:180%; }
 }
 
 @media print, screen and (max-width:768px){
