--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2501,25 +2501,38 @@ ol li { list-style-type:decimal; margin:15px 0;}
 
 .post_list { display:flex; flex-wrap:wrap; }
 .post_box { width : calc(100% / 3); padding:1%; display: flex; flex-direction: column; }
-.post_thumb img { transition: all .3s ease; }
-
-.post_thumb img { width: 100%; height: 220px; object-fit: cover; margin: 0!important;}
-
+.post_thumb img { width: 100%; height: 220px; object-fit: cover; margin: 0!important; transition: all .3s ease;}
 .post_thumb img:hover { opacity:0.6;}
+
 .post_txt { padding:15px; background-color:#fff; display: flex; flex-direction: column; height: 100%; }
 .post_img { margin: 20px 0; text-align: center; }
 .post_body img { margin-top: 15px; }
+
+.syachou_list { display:flex; flex-wrap:wrap; }
+.syachou_box { width : calc(100% / 3); padding:1%; display: flex; flex-direction: column; }
+.syachou_thumb a { display: flex; height: 193px; background-color: #fff; }
+.syachou_thumb img { width: 100%; object-fit: contain; margin: 0!important; transition: all .3s ease;}
+.syachou_thumb img:hover { opacity:0.6;}
+
 @media screen and (max-width:768px){
-	.post_box { width : calc(100% / 2);}
+	#mainimage-sub { margin-top: 95px;}
+	.post_box,.syachou_box { width : calc(100% / 2);}
+	.syachou_thumb a { display: flex; height: 217px; background-color: #fff; }
 	.post_thumb img { height: 220px;}
 }
 
 @media screen and (max-width:767px){
 	.post_box { width : calc(100% / 1);}
 	.post_thumb img { height: 220px;}
+
+	.syachou_box { width : calc(100% / 1); margin-bottom: 3%; }
+	.syachou_thumb a { display: flex; height: 217px; background-color: #fff; }
 }
 
 @media screen and (max-width:900px) and (orientation: landscape){
+	#mainimage-sub { margin-top: 67px;}
+	.syachou_box { width : calc(100% / 2); margin-bottom: 3%; }
+	.syachou_thumb a { display: flex; height: 193px; }
 	.post_thumb img { height: 153px;}
 }
 
