--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2825,3 +2825,7 @@ form label {
 
 .blog-top .page-nav li:first-child a { background-color: #fd7416; border: solid 2px #fd7416; color: #fff; font-weight: 900; }
 .blog-top .page-nav li:first-child a:hover { background-color: #fff; color: #fd7416; border: solid 2px #fd7416; }
+
+.are_img { position: relative; margin-bottom: 10px;}
+.are_img img { margin-bottom: 10px;}
+.are_img:after { content: "アレコレブログ"; display: inline-block; font-size: 9px; position: absolute; bottom: 10px; background-color: #fd7416; border-radius: 10px; color: #fff; padding: 3px 15px; }
