--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -100,6 +100,16 @@ select { min-height: 40px; border: solid 1px #bfbfbf; background-color: #f5f5f5;
 	.order11 { order:11;}
 }
 
+/*769以上は非表示*/
+@media screen and (min-width: 769px) {
+	.tub2 { display:none !important; }
+}
+
+/*481以上は非表示*/
+@media screen and (min-width: 481px) {
+	.smp2 { display:none !important; }
+}
+
 .flex-wrap { display:flex; flex-wrap:wrap; }
 .flex-center { display:flex; flex-wrap:wrap; justify-content: center; align-items: center; align-content: center; }
 .flex-vcenter { display:flex; flex-wrap:wrap; justify-content: flex-start; align-items: center; }
@@ -1322,6 +1332,7 @@ _::-webkit-full-page-media, _:future, :root .souba_l select { background-color: 
     text-align: center;
     letter-spacing: 2px;
     position: relative;
+	
 }
 }
 
@@ -1907,7 +1918,7 @@ ol li { list-style-type:decimal; margin:15px 0;}
 .title01 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900;font-style: normal; font-size: 180%; margin-top: 35px; }
 .title02 { border-bottom: 8px solid #5ec618; font-family: 'Noto Sans JP', sans-serif; font-weight: 700;font-style: normal; padding: 5px 0px; font-size: 140%; display: inline-block; margin: 15px 0 10px 0!important;  color: #ff7415; }
 .title03 { border-left: 5px solid #000; font-family: 'Noto Sans JP', sans-serif; font-style: normal; padding: 10px 20px; font-size: 140%; margin-top:60px; }
-.title04 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; font-size: 300%; background-color:#ff7415; color: #fff; padding: 1% 0; margin: 0;  text-align: center; letter-spacing: 2px; position: relative; }
+.title04 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; font-size: 300%; background-color:#ff7415; color: #fff; padding: 1% 0; margin: 0;  text-align: center; letter-spacing: 2px; position: relative; z-index: 20;}
 .title04::before{
     content: '';
     position: absolute;
@@ -2012,6 +2023,10 @@ ol li { list-style-type:decimal; margin:15px 0;}
 
 .aeon_title01 { font-size:300%; color:#b3007f; font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; margin:3% 0; }
 .aeon_title02 { font-size:250%; color:#b3007f; font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; margin:3% 0; }
+
+@media not screen and (min-width: 1025px) {
+	.title04 { font-size: 200%; }
+}
 
 @media screen and (max-width:768px){
 	.title01 { font-family: 'Noto Sans JP', sans-serif; font-weight: 700;font-style: normal; font-size: 140%; margin-top: 3%; }
