--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -101,7 +101,7 @@ select { min-height: 40px; border: solid 1px #bfbfbf; background-color: #f5f5f5;
 }
 
 /*769以上は非表示*/
-@media screen and (min-width: 769px) {
+@media screen and (max-width: 667px) {
 	.tub2 { display:none !important; }
 }
 
@@ -1918,7 +1918,7 @@ ol li { list-style-type:decimal; margin:15px 0;}
 .title01 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900;font-style: normal; font-size: 180%; margin-top: 35px; }
 .title02 { border-bottom: 8px solid #5ec618; font-family: 'Noto Sans JP', sans-serif; font-weight: 700;font-style: normal; padding: 5px 0px; font-size: 140%; display: inline-block; margin: 15px 0 10px 0!important;  color: #ff7415; }
 .title03 { border-left: 5px solid #000; font-family: 'Noto Sans JP', sans-serif; font-style: normal; padding: 10px 20px; font-size: 140%; margin-top:60px; }
-.title04 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; font-size: 300%; background-color:#ff7415; color: #fff; padding: 1% 0; margin: 0;  text-align: center; letter-spacing: 2px; position: relative; z-index: 20;}
+.title04 { font-family: 'Noto Sans JP', sans-serif; font-weight: 900; font-style: normal; font-size: 250%; background-color:#ff7415; color: #fff; padding: 1% 0; margin: 0;  text-align: center; letter-spacing: 2px; position: relative; z-index: 20;}
 .title04::before{
     content: '';
     position: absolute;
@@ -2844,3 +2844,44 @@ form label {
 .are_img { position: relative; margin-bottom: 10px;}
 .are_img img { margin-bottom: 10px;}
 .are_img:after { content: "アレコレブログ"; display: inline-block; font-size: 9px; position: absolute; bottom: 10px; background-color: #fd7416; border-radius: 10px; color: #fff; padding: 3px 15px; }
+
+.slide-in-element {
+	position: fixed;
+	right: -200px; /* スライドイン前の位置 */
+	bottom: 0;
+	background-color: #000;
+	color: #fff;
+	transition: right 0.3s ease-in-out;
+	z-index: 100;
+  }
+  
+  .slide-in-element.visible {
+	right: 0; /* スライドイン後の位置 */
+	bottom: 0;
+  }
+
+  .scroll-to-top {
+	position: fixed;
+	bottom: 0px;
+	right: 45px;
+	width: 40px;
+	height: 40px;
+	background-color: #000;
+	color: #fff;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+	opacity: 0;
+	transition: opacity 0.3s ease-in-out;
+	z-index: 100;
+	cursor:pointer;
+  }
+  
+  
+  .scroll-to-top.visible {
+	opacity: 1;
+	&:hover { opacity: 0.5;}
+  }
+  
