--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2847,20 +2847,34 @@ form label {
 
 .slide-in-element {
 	position: fixed;
-	right: -200px; /* スライドイン前の位置 */
+	right: -800px; /* スライドイン前の位置 */
 	bottom: 0;
-	background-color: #000;
-	color: #fff;
 	transition: right 0.3s ease-in-out;
 	z-index: 100;
-  }
+	@media screen and (max-width:768px){
+		width: 100%;
+	}
+	ul {
+		@media screen and (max-width:768px){
+			display: flex;
+			flex-wrap: wrap;
+		}
+		li {
+			@media screen and (max-width:768px){
+				width: calc(100% /2);
+			}
+		}
+
+	}
+
+}
   
-  .slide-in-element.visible {
+.slide-in-element.visible {
 	right: 0; /* スライドイン後の位置 */
 	bottom: 0;
-  }
+}
 
-  .scroll-to-top {
+.scroll-to-top {
 	position: fixed;
 	bottom: 0px;
 	right: 45px;
@@ -2877,11 +2891,11 @@ form label {
 	transition: opacity 0.3s ease-in-out;
 	z-index: 100;
 	cursor:pointer;
-  }
+}
   
   
-  .scroll-to-top.visible {
+.scroll-to-top.visible {
 	opacity: 1;
 	&:hover { opacity: 0.5;}
-  }
+}
   
